# serializer version: 1
# name: test_build_file_handler_builder
  dict({
    'capacity': 10,
    'flush_after_records': 2,
    'formatter': 'default',
    'overflow_policy': 'drop',
    'path': 'test.log',
  })
# ---
# name: test_build_http_handler_builder
  dict({
    'connect_timeout_ms': 1000,
    'format': 'url_encoded',
    'method': 'POST',
    'url': 'http://localhost:8080/log',
    'write_timeout_ms': 5000,
  })
# ---
# name: test_build_rotating_file_handler_builder
  dict({
    'backup_count': 5,
    'capacity': 10,
    'flush_after_records': 2,
    'formatter': 'default',
    'max_bytes': 1024,
    'overflow_policy': 'drop',
    'path': 'test.log',
  })
# ---
# name: test_build_socket_handler_builder_for_tcp
  dict({
    'capacity': 8,
    'connect_timeout_ms': 500,
    'host': '127.0.0.1',
    'max_frame_size': 2048,
    'port': 9020,
    'tls': True,
    'tls_domain': 'example.com',
    'tls_insecure': False,
    'transport': 'tcp',
    'write_timeout_ms': 250,
  })
# ---
# name: test_build_stream_handler_builder
  dict({
    'capacity': 8,
    'formatter': 'default',
    'target': 'stdout',
  })
# ---
# name: test_build_stream_handler_builder_with_flush_after_ms
  dict({
    'flush_after_ms': 250,
    'formatter': 'default',
    'target': 'stdout',
  })
# ---
# name: test_dictconfig_rotating_file_handler_builder
  dict({
    'backup_count': 5,
    'capacity': 10,
    'flush_after_records': 2,
    'formatter': 'default',
    'max_bytes': 1024,
    'overflow_policy': 'drop',
    'path': 'test.log',
  })
# ---
# name: test_file_handler_builder_with_timeout_overflow_policy
  dict({
    'overflow_policy': 'timeout',
    'path': 'test.log',
    'timeout_ms': 500,
  })
# ---
# name: test_http_handler_builder_with_basic_auth
  dict({
    'auth_type': 'basic',
    'auth_user': 'admin',
    'format': 'url_encoded',
    'url': 'http://localhost:8080/log',
  })
# ---
# name: test_http_handler_builder_with_bearer_token
  dict({
    'auth_type': 'bearer',
    'format': 'url_encoded',
    'url': 'http://localhost:8080/log',
  })
# ---
# name: test_http_handler_builder_with_json_format
  dict({
    'format': 'json',
    'url': 'http://localhost:8080/log',
  })
# ---
# name: test_http_handler_builder_with_record_fields
  dict({
    'format': 'url_encoded',
    'record_fields': list([
      'name',
      'msg',
      'levelname',
    ]),
    'url': 'http://localhost:8080/log',
  })
# ---
